# lm_theory

./: .gitignore  Dockerfile  README.md  example_database.json  pyproject.toml  start.sh
lm_theory/: app.py
lm_theory/assets/css/: styles.css
lm_theory/assets/js/: scripts.js
lm_theory/config/: config.py
lm_theory/data/: paper_database.json
lm_theory/data/llama_index/: documents.json  statement2latex_defs.json
lm_theory/data/llama_index/persist_index/: docstore.json  index_store.json
lm_theory/generate_html/: html_pages_builder.py
lm_theory/generate_html/html_rendering/: html_renderer.py  jinja2_env_filters.py
lm_theory/html/: contact.html  contribute.html  examples.html  index.html
lm_theory/html/contribute/: add_paper.html  add_statement.html  index.html  submit_paper_extraction.html
lm_theory/index/: index_builder.py
lm_theory/llama_index/: index_builder.py
lm_theory/lunar_workflows/: db2llamaindex.json  llamaindex_quest.json
lm_theory/paper_extraction/builders/: paper_database_builder.py
lm_theory/paper_extraction/config/: config.py  llm_config.py
lm_theory/paper_extraction/data_models/: paper.py  paper_database.py
lm_theory/paper_extraction/utils/: tex_processing.py
lm_theory/proof_assistant/: proof_assistant.py  requirements.txt
lm_theory/scripts/: executor.py
lm_theory/templates/: add_paper.html.jinja  add_statement.html.jinja  base.html.jinja  contribute.html.jinja  proof_assistant.html.jinja  statement.html.jinja  submit_paper_extraction.html.jinja
lm_theory/utils/: utils.py
